# camoufox-versatile-mcp

./: .gitignore  README.md  README_en.md  pyproject.toml
src/camoufox_versatile_mcp/: __init__.py  __main__.py  _playwright_patch.py  browser.py  constants.py  deprecation.py  http_trace.py  js_engine_trace.py  property_trace.py  server.py  session_registry.py
src/camoufox_versatile_mcp/hooks/: cookie_hook.js  crypto_hook.js  debugger_trap.js  fetch_hook.js  font_fallback.js  jsvmp_hook.js  jsvmp_transparent_hook.js  property_access_hook.js  runtime_probe.js  trace_persistent_template.js  trace_template.js  websocket_hook.js  xhr_hook.js
src/camoufox_versatile_mcp/tools/: __init__.py  captcha.py  cookie_analysis.py  debugging.py  environment.py  fingerprint.py  hooking.py  instrumentation.py  js_engine_trace_mcp.py  jsvmp.py  navigation.py  network.py  script_analysis.py  storage.py  trace.py  verification.py  vmp_pipeline.py
src/camoufox_versatile_mcp/tools/vmp_pipeline/: __init__.py  _detection.py  _node.py  _replay.py  _tracing.py  _wasm.py
src/camoufox_versatile_mcp/utils/: __init__.py  ast_rewriter.py  js_helpers.py  js_rewriter.py  response_fmt.py
tests/: conftest.py  test_browser.py  test_constants.py  test_http_trace.py  test_js_engine_trace.py  test_js_engine_trace_mcp.py  test_vmp_pipeline.py
