[project]
name = "camoufox-versatile-mcp"
version = "1.0.0"
description = "Anti-detection browser MCP server with built-in versatile captcha auto-solve (cloudflare today; hcaptcha/recaptcha future-proof)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "camoufox[geoip]>=0.4.0",
    "playwright>=1.40.0",
    "esprima>=4.0.1",
    "camoufox-captcha>=0.1.3",
]

[project.scripts]
camoufox-versatile-mcp = "camoufox_versatile_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_versatile_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
